[tool.poetry]
name = "repl_python3_DogeTrading-Bot"
version = "0.1.0"
description = ""
authors = ["kenhacodes <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
alpaca-trade-api = "^1.3.0"
pymongo = "^3.12.0"
Flask = "^2.0.1"
PythonDNS = "^0.1"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
